--- a/index.html
+++ b/index.html
@@ -936,11 +936,11 @@ https://templatemo.com/tm-588-ebook-landing
                 <p class="p">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p class="p">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                         <div class="p-2">
-                            <p style="color:white;"><a  href='tel:+91 7702218313' style="color:white; text-decoration: none; "><i class="fa fa-phone" aria-hidden="true"></i>+91 7702218313</a></p>
+                            <p style="color:white;"><a  href='tel:+91 7702218313' style="color:white; text-decoration: none; "><i class="fa fa-phone" aria-hidden="true"></i>+91 99********</a></p>
                         </div>
                         <p> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                         <div class="p-2">
-                            <p style="color:white;"><a  href='tel:+91 9542333385' style="color:white; text-decoration: none; "><i class="fa fa-phone" aria-hidden="true"></i>+91 9542333385</a></p>
+                            <p style="color:white;"><a  href='tel:+91 9542333385' style="color:white; text-decoration: none; "><i class="fa fa-phone" aria-hidden="true"></i>+91 95********</a></p>
                         </div>
    
                     
